# Hoax

./: .gitignore  CMakeLists.txt  README.md
pyscripts/: disasmd.py  scanmemd.py
source/: main.cpp
source/hoax/: styler.hpp  ui.cpp  ui.hpp
source/hoax/subwindows/: address_actions.cpp  address_modifier.cpp  input_line.cpp  memory_viewer.cpp  notepad.cpp  process_picker.cpp  scanner.cpp
source/tools/: log.h  proclist.cpp  tools.h
